# vajra

./: .dockerignore  .gitignore  .markdownlint.json  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  Gemfile  LICENSE  LICENSE.txt  README.md  Rakefile  SECURITY.md  vajra.code-workspace  vajra.gemspec
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md  feature_request.md  question_or_help.md  report_a_security_vulnerability.md  translations.md
.github/instructions/: review.instructions.md  vajra-rbs.instructions.md  vajra.instructions.md
.github/workflows/: ci.yml  codeql.yml  danger.yml  jekyll-gh-pages.yml  release-drafter.yml  release.yml  shared-ci.yml
danger/: Dangerfile  Gemfile
docs/: .gitignore  404.html  CNAME  Gemfile  _config.yml  index.md
docs/_includes/: footer_custom.html  head_custom.html
docs/pages/: 02-installation.md  03-configuration.md  04-architecture.md  04-command-reference.md  05-development.md  05-frameworks.md  05-observability.md  06-rack-compatibility.md  06-troubleshooting.md  07-production.md  08-performance.md  09-security.md  10-migration.md  11-api-reference.md  12-upgrading.md  13-compatibility.md  14-glossary.md  architecture.md  benchmarking.md  configuration.md  development.md  docs-publishing.md  engineering-failure-modes.md  engineering-ipc.md  engineering-runtime.md  engineering-scheduling.md  getting-started.md  installation.md  integration.md  observability.md  operations.md  running-vajra.md  runtime-model.md  troubleshooting.md
docs/pages/04-architecture/: 01-request-path.md  02-ipc-protocol.md  02-runtime-model.md  03-failure-modes.md  03-native-input.md  04-protocols.md  05-http2-stream-tunnels.md  05-rack-hijack.md  06-shutdown-drain.md
docs/pages/frameworks/: hanami.md  index.md  rails.md  roda.md  sinatra.md
ext/vajra/: extconf.rb  vajra.c  vajra.h
gems/vajra/: .reek.yml  .rubocop.yml  Gemfile  README.md  Rakefile  vajra.gemspec
gems/vajra/exe/: vajra
gems/vajra/ext/vajra/: extconf.rb  server.cpp  server.hpp  vajra.cpp  vajra.hpp
gems/vajra/ext/vajra/ipc/: channel_kind.hpp  frame_contract.cpp  frame_contract.hpp  frame_family.hpp  frame_header.cpp  frame_header.hpp  protocol_compatibility.cpp  protocol_compatibility.hpp  protocol_contract.cpp  protocol_contract.hpp  protocol_version.hpp
gems/vajra/ext/vajra/lifecycle/: lifecycle_controller.cpp  lifecycle_controller.hpp
gems/vajra/ext/vajra/listener/: listener_socket.cpp  listener_socket.hpp
gems/vajra/lib/: vajra.rb
gems/vajra/lib/vajra/: cli.rb  rails.rb  railtie.rb  version.rb
gems/vajra/performance/: Gemfile  Makefile  README.md  Rakefile
gems/vajra/sig/: vajra.rbs
gems/vajra/sig/vajra/: cli.rbs  rails.rbs  railtie.rbs
gems/vajra/spec/: spec_helper.rb  vajra_spec.rb
gems/vajra/spec/cpp/: CMakeLists.txt  http2_stream_test.cpp  ipc_contract_test.cpp  ipc_frame_contract_test.cpp  ipc_frame_header_test.cpp  ipc_protocol_compatibility_test.cpp  lifecycle_controller_test.cpp  rack_env_test.cpp  request_head_test.cpp  response_test.cpp  ruby_execution_bridge_stub.cpp  ruby_rack_transport_stub.cpp  runtime_logging_test.cpp  server_lifecycle_test.cpp  server_test.cpp  test_suites.hpp  test_support.cpp  test_support.hpp  worker_execution_pool_test.cpp
gems/vajra/spec/e2e/: spec_helper.rb
gems/vajra/spec/support/: documented_server_options.rb
gems/vajra/spec/vajra/: cli_spec.rb  native_extension_spec.rb  rails_spec.rb  railtie_spec.rb  vajra_header_spec.rb  vajra_public_api_spec.rb  vajra_start_spec.rb  vajra_version_spec.rb
lib/: vajra.rb
lib/vajra/: version.rb
scripts/: ci-install-bundles  run-all  run-clint-all  run-common  run-ctest-all  run-docs-build-all  run-h2spec-all  run-in-docker  run-package-build-all  run-performance-all  run-performance-main  run-performance-observability  run-performance-protocol  run-rbs-all  run-reek-all  run-rspec-e2e-all  run-rspec-unit-all  run-rubocop-all  update-all
sig/: vajra.rbs
spec/: spec_helper.rb  vajra_spec.rb
(+90 files in other folders)
